photos and some updates to the script

--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sam's Sarnies</title>
   <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
-<!-- Latest compiled JavaScript -->
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <!-- Latest compiled JavaScript -->
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
 
-</head>
+  </head>
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -56,9 +56,9 @@
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
+  </div>
 
-<body>
+  <body>
   <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -111,7 +111,7 @@
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
-</nav>
+  </nav>
     <div class='jumbotron'>
       <div class="container">
         <div class='row'>
@@ -129,15 +129,15 @@
     </form>
     </div>
   </div>
-  
+
 
   <div id="buzz">
     <div class="container">
     <h2><small>The Buzz</small><br />What are people saying?</h2>
     <div class='row'>
-      <div class='col-sm-4'>
+      <div class='col-sm-3'>
         <div>
-          <img class='img-circle center-block' src='images/person.jpg'>
+          <img class='center-block' src='images/person.jpg'>
           <blockquote>
           <p>These sandwiches are the best I've ever tasted, for sure. I now eat them every day - breakfast, lunch and dinner.</p>
           
@@ -146,18 +146,27 @@
         </div>
 
       </div>
-       <div class='col-sm-4'>
+       <div class='col-sm-3'>
         <div>
-          <img class='img-circle center-block' src='images/person.jpg'>
+          <img class='center-block' src='images/person.jpg'>
           <blockquote>
           <p>My team are always far more productive after we order from Sam's. 40% more productive, in fact.</p>
           <footer>Miss McAdam, CEO Workplace Analytics</footer>
           </blockquote>
         </div>
       </div>
-       <div class='col-sm-4'>
+       <div class='col-sm-3'>
         <div>
-          <img class='img-circle center-block' src='images/person.jpg'>
+          <img class='center-block' src='images/person.jpg'>
+          <blockquote>
+          <p>We switched to Sam's Sarnies and won our first government contract the next day. Coincidence? I think not!</p>
+          <footer>Mr Green, President Suspicion Inc.</footer>
+          </blockquote>
+          </div>
+      </div>
+       <div class='col-sm-3'>
+        <div>
+          <img class='center-block' src='images/person.jpg'>
           <blockquote>
           <p>We switched to Sam's Sarnies and won our first government contract the next day. Coincidence? I think not!</p>
           <footer>Mr Green, President Suspicion Inc.</footer>
@@ -184,13 +193,13 @@
     </div>
   </div>
   </div>
-</center>
+  </center>
 
 
-</body>
+  </body>
 
 
-<!-- Sandwich from: © Kosoff | <a href="http://www.dreamstime.com/">Dreamstime Stock Photos</a> & <a href="http://www.stockfreeimages.com/">Stock Free Images</a> -->
-</html>
+  <!-- Sandwich from: © Kosoff | <a href="http://www.dreamstime.com/">Dreamstime Stock Photos</a> & <a href="http://www.stockfreeimages.com/">Stock Free Images</a> -->
+  </html>
 
 
