--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class='row'>
       <div class='col-sm-3'>
         <div>
-          <img class='center-block' src='images/person.jpg'>
+          <img class='center-block' src='images/paris1.jpg'>
           <blockquote>
           <p>These sandwiches are the best I've ever tasted, for sure. I now eat them every day - breakfast, lunch and dinner.</p>
           
@@ -148,7 +148,7 @@
       </div>
        <div class='col-sm-3'>
         <div>
-          <img class='center-block' src='images/person.jpg'>
+          <img class='center-block' src='images/rome1.jpg'>
           <blockquote>
           <p>My team are always far more productive after we order from Sam's. 40% more productive, in fact.</p>
           <footer>Miss McAdam, CEO Workplace Analytics</footer>
@@ -157,7 +157,7 @@
       </div>
        <div class='col-sm-3'>
         <div>
-          <img class='center-block' src='images/person.jpg'>
+          <img class='center-block' src='images/berlin1.jpg'>
           <blockquote>
           <p>We switched to Sam's Sarnies and won our first government contract the next day. Coincidence? I think not!</p>
           <footer>Mr Green, President Suspicion Inc.</footer>
