--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sam's Sarnies</title>
+  <title>Wanderlust</title>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
@@ -59,6 +59,25 @@
 </div>
 
 <body>
+
+    <div class='jumbotron'>
+      <div class="container">
+        <div class='row'>
+            <div class='col-sm-8'>
+             <h1>Wanderlust</h1>
+            </div>
+            <div class='col-sm-4'>
+              <img class='img-responsive' src='images/cover.jpg'>
+            </div>
+        </div>
+    <form role='form'>
+      <label for="email">Discover</label>
+      <input type="text" name="email" >
+      <button class="btn btn-success" type="submit">Search</button>
+    </form>
+    </div>
+  </div>
+
   <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -69,7 +88,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#">Wanderlust</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -112,23 +131,6 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-    <div class='jumbotron'>
-      <div class="container">
-        <div class='row'>
-            <div class='col-sm-8'>
-             <h1>Healthy sandwiches for your team</h1>
-            </div>
-            <div class='col-sm-4'>
-              <img class='img-responsive' src='images/sandwich.png'>
-            </div>
-        </div>
-    <form role='form'>
-      <label for="email">Find out more</label>
-      <input type="text" name="email" >
-      <button class="btn btn-success" type="submit">Send</button>
-    </form>
-    </div>
-  </div>
   
 
   <div id="buzz">
